--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <h1 class="title">2023년 신년계획</h1>
     <p class="msg">올해는 꼭 모두 지키자!</p>
     <div class="row flex-row wrap">
-      <div class="bucket img1 center">건강하기</div>
+      <div class="bucket img1 center done">건강하기</div>
       <div class="bucket img2 center">건강하기</div>
       <div class="bucket img1 center">건강하기</div>
       <div class="bucket img2 center">건강하기</div>
